--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,9 +34,11 @@
     <string name="city_label">city</string>
     <string name="country_label">country</string>
     <string name="region_label">region</string>
-    <string name="enter_motivation">Please enter your motivation in 1-2 sentences</string>
+    <string name="enter_motivation">Please enter your motivation in 1&#8211;2 sentences</string>
     <string name="submitted">Submitted, no need to submit again</string>
     <string name="done">Done</string>
+    <string name="text_01" translatable="false">Text 01</string>
     <string name="submit">Submit</string>
     <string name="about_me">About Me</string>
+    <string name="text_02" translatable="false">Text 02</string>
 </resources>
